修改网站下标

--- a/themes/p3r/layout/layout.ejs
+++ b/themes/p3r/layout/layout.ejs
@@ -125,7 +125,7 @@
 
     <footer class="mt-20 p-12 bg-blue-600 slanted-box -mb-10 ml-10">
         <div class="slanted-content text-right text-white italic font-bold">
-            <p>© <%= new Date().getFullYear() %> OPERATION MEMENTO. ALL RIGHTS RESERVED.</p>
+            <p>© <%= new Date().getFullYear() %> OPERATION MEMENTO. </span> // ARCHIVE BY <%= config.author %></p>
         </div>
     </footer>
 </body>
