--- a/themes/p3r/layout/layout.ejs
+++ b/themes/p3r/layout/layout.ejs
@@ -129,7 +129,7 @@
             }
 
             /* 针对侧边栏卡片的微调 */
-            .slanted-box::after {
+            /* .slanted-box::after {
                 content: "SYSTEM_MONITOR";
                 position: absolute;
                 bottom: 4px;
@@ -137,7 +137,7 @@
                 font-size: 8px;
                 color: rgba(0, 0, 0, 0.2);
                 font-family: monospace;
-            }
+            } */
     </style>
 </head>
 <body class="bg-gradient-animate min-h-screen">
